--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -1688,7 +1688,7 @@ body{
    Accounts pages
 ============= */
 .account-pages {
-  background-color: #e9ebee!important;
+  background-color: #80727b!important;
   position: absolute;
   height: 100%;
   width: 100%;
